cfn_benchmark/cfn_templates/meghlabd275-byte__TigerWallet/deployments/user_wallet/cloudformation/template.yaml
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "UserWallet White Label Deployment on AWS",
  "Parameters": {
    "EnvironmentName": {
      "Type": "String",
      "Default": "user-wallet"
    },
    "DBPassword": {
      "Type": "String",
      "NoEcho": true
    },
    "ApiKey": {
      "Type": "String",
      "NoEcho": true
    },
    "ApiSecret": {
      "Type": "String",
      "NoEcho": true
    },
    "JwtSecret": {
      "Type": "String",
      "NoEcho": true
    },
    "SuperAdminUrl": {
      "Type": "String",
      "Default": "https://super-admin.tigerwallet.com"
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [{"Key": "Name", "Value": {"Ref": "EnvironmentName"}}]
      }
    },
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": {"Fn::Select": ["0", {"Fn::GetAZs": ""}]},
        "MapPublicIpOnLaunch": true,
        "Tags": [{"Key": "Name", "Value": {"Ref": "EnvironmentName"}}]
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": {"Fn::Select": ["1", {"Fn::GetAZs": ""}]},
        "MapPublicIpOnLaunch": true,
        "Tags": [{"Key": "Name", "Value": {"Ref": "EnvironmentName"}}]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {"Tags": [{"Key": "Name", "Value": {"Ref": "EnvironmentName"}}]}
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "InternetGatewayId": {"Ref": "InternetGateway"}
      }
    },
    "DBSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "UserWallet DB subnet group",
        "SubnetIds": [{"Ref": "PublicSubnet1"}, {"Ref": "PublicSubnet2"}]
      }
    },
    "Database": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "DBInstanceIdentifier": {"Fn::Sub": "${EnvironmentName}-db"},
        "Engine": "postgres",
        "EngineVersion": "15.3",
        "DBInstanceClass": "db.t3.medium",
        "AllocatedStorage": 50,
        "MasterUsername": "userwallet",
        "MasterUserPassword": {"Ref": "DBPassword"},
        "DBSubnetGroupName": {"Ref": "DBSubnetGroup"},
        "VPCSecurityGroups": [{"Fn::GetAtt": "DatabaseSecurityGroup.GroupId"}],
        "BackupRetentionPeriod": 7,
        "DeletionProtection": true
      }
    },
    "DatabaseSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Database security group",
        "VpcId": {"Ref": "VPC"},
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": 5432, "ToPort": 5432, "CidrIp": "10.0.0.0/16"}
        ]
      }
    },
    "RedisCluster": {
      "Type": "AWS::ElastiCache::ReplicationGroup",
      "Properties": {
        "ReplicationGroupDescription": "UserWallet Redis",
        "ReplicationGroupId": {"Fn::Sub": "${EnvironmentName}-redis"},
        "AutomaticFailoverEnabled": true,
        "CacheNodeType": "cache.t3.medium",
        "CacheEngine": "redis",
        "CacheEngineVersion": "7.0",
        "NumNodeGroups": 1,
        "ReplicasPerNodeGroup": 1,
        "Port": 6379,
        "SubnetGroupName": {"Ref": "RedisSubnetGroup"},
        "SecurityGroupIds": [{"Fn::GetAtt": "RedisSecurityGroup.GroupId"}]
      }
    },
    "RedisSubnetGroup": {
      "Type": "AWS::ElastiCache::SubnetGroup",
      "Properties": {
        "Description": "Redis subnet group",
        "SubnetIds": [{"Ref": "PublicSubnet1"}, {"Ref": "PublicSubnet2"}]
      }
    },
    "RedisSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Redis security group",
        "VpcId": {"Ref": "VPC"},
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": 6379, "ToPort": 6379, "CidrIp": "10.0.0.0/16"}
        ]
      }
    },
    "ECSCluster": {
      "Type": "AWS::ECS::Cluster",
      "Properties": {
        "ClusterName": {"Ref": "EnvironmentName"}
      }
    },
    "ApplicationLoadBalancer": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Name": {"Ref": "EnvironmentName"},
        "Scheme": "internet-facing",
        "Subnets": [{"Ref": "PublicSubnet1"}, {"Ref": "PublicSubnet2"}],
        "SecurityGroups": [{"Ref": "ALBSecurityGroup"}]
      }
    },
    "ALBSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "ALB security group",
        "VpcId": {"Ref": "VPC"},
        "SecurityGroupIngress": [
          {"IpProtocol": "tcp", "FromPort": 80, "ToPort": 80, "CidrIp": "0.0.0.0/0"},
          {"IpProtocol": "tcp", "FromPort": 443, "ToPort": 443, "CidrIp": "0.0.0.0/0"}
        ]
      }
    }
  },
  "Outputs": {
    "LoadBalancerDNS": {
      "Description": "Load Balancer DNS",
      "Value": {"Fn::GetAtt": "ApplicationLoadBalancer.DNSName"}
    },
    "DatabaseEndpoint": {
      "Description": "Database Endpoint",
      "Value": {"Fn::GetAtt": "Database.Endpoint.Address"}
    }
  }
}
